...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yud-9X-UMO">
                                <rect key="frame" x="365.66666666666669" y="165.66666666666666" width="81" height="44"/>
                                <accessibility key="accessibilityConfiguration" label="hitMe_btn"/>
                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="26"/>
                                <state key="normal" title="Hit Me!">
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y5r-O7-epF">
                                        <rect key="frame" x="0.0" y="1.3333333333333144" width="24.333333333333332" height="24.666666666666668"/>
                                        <accessibility key="accessibilityConfiguration" label="startOver_btn"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tny-aq-r1X">
                                        <rect key="frame" x="659.66666666666663" y="1.3333333333333144" width="24.333333333333371" height="25"/>
                                        <accessibility key="accessibilityConfiguration" label="account_btn">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T5n-pW-TEf">
                                <rect key="frame" x="722" y="20" width="26" height="28"/>
                                <accessibility key="accessibilityConfiguration" label="ranking_btn"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="26" id="0t6-SW-nmn"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ie3-AR-G8i">
                                <rect key="frame" x="381" y="298" width="50" height="36"/>
                                <accessibility key="accessibilityConfiguration" label="close_btn"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Close">
...
                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" About me 🧑🏻‍💻" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3cq-aX-WbU">
                                <rect key="frame" x="64" y="304" width="120" height="24"/>
                                <accessibility key="accessibilityConfiguration" label="about_btn"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
